--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- LINK EXTERNO DO JS e do CSS -->
-    <script src="./static/js/scripts.js" defer></script>
-    <link rel="stylesheet" href="./static/styles/styles.css" />
+    <script src="../static/js/scripts.js" defer></script>
+    <link rel="stylesheet" href="../static/styles/styles.css" />
 
     <!-- TITULO DO SITE -->
     <title>Atividade Formulário</title>
