--- a/views/login.ejs
+++ b/views/login.ejs
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- LINK EXTERNO DO JS e do CSS -->
-    <script src="../static/js/scripts.js" defer></script>
+    <!-- <script src="../static/js/scripts.js" defer></script> -->
     <link rel="stylesheet" href="../static/styles/styles.css" />
 
     <!-- TITULO DO SITE -->
@@ -23,19 +23,19 @@
       </div>
 
       <!-- FORMULARIO -->
-      <form id="cadastro">
+      <form id="cadastro" action="/login" method="post">
         <div class="title">
           <h1>Cadastre-se</h1>
           <p>Preencha os campos abaixo e torne-se parte da nossa comunidade.</p>
         </div>
 
         <div class="input_data">
-          <input type="text" name="nome" id="nome" required />
+          <input type="text" name="username" id="nome" required />
           <label for="">Nome</label>
         </div>
 
         <div class="input_data">
-          <input type="password" name="senha" id="senha" required />
+          <input type="password" name="password" id="senha" required />
           <label for="">Senha</label>
         </div>
 
